# datastone

./: .env  README.md  docker-compose.yml  pyproject.toml  up.ps1  up.sh
config_docker_python/: Dockerfile
data_stone_app/: manage.py  wait_for_psql.sh
data_stone_app/api/: routes.py  tests.py  views.py
data_stone_app/api/utils/: utils_decorators.py  utils_exceptions.py
data_stone_app/data_stone_app/: asgi.py  settings.py  urls.py  wsgi.py
docs_data_stone/: mkdocs.yml
docs_data_stone/docs/: index.md
nginx/: nginx.conf
